--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -292,6 +292,7 @@ Verde: #39b54a; */
     }
 }
 /* MQ tablet */
+
 @media(min-width: 361px)  {
     .titulares{
         font-size: large;
@@ -376,9 +377,16 @@ Verde: #39b54a; */
         flex-direction: row;    
         margin-left: -70px;
     }
+    .noCopyr{
+        display:flex;
+        flex-direction: column;
+       
+    }
+}
     
 /* MQ desktop */
 @media(min-width: 769px){
+    
     .productos{
     box-shadow: 0px 0px 10px rgb(100, 100, 100);
     }
@@ -423,7 +431,7 @@ Verde: #39b54a; */
      .titulares{
          margin-left: 30px;
      }
-    }
+    
     .headerYcuotas{
         display: flex;
         flex-direction: row;
@@ -459,11 +467,12 @@ Verde: #39b54a; */
     }
 
     .noCopyr{
-        flex-direction: row;
-        border: red dotted;
+        display: flex;
+        flex-direction: row;    
     }
     .footer-icon:hover{
         color: #39b54a;
     }
+
 }
 
